crates/dag-macros/tests/ui/node_missing_name.stderr
error: [DAG001] #[node] requires `name = "..."`
 --> tests/ui/node_missing_name.rs:5:1
  |
5 | async fn missing(input: ()) -> NodeResult<()> {
  | ^^^^^

warning: unused import: `dag_core::NodeResult`
 --> tests/ui/node_missing_name.rs:1:5
  |
1 | use dag_core::NodeResult;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
