crates/dag-macros/tests/ui/node_missing_name.rs
use dag_core::NodeResult;
use dag_macros::node;

#[node]
async fn missing(input: ()) -> NodeResult<()> {
    let _ = input;
    Ok(())
}
